# pum-assesment

./: .gitignore  README.md  pyproject.toml
cli/: README.md  main.py
models/: .gitkeep  X_columns.pkl
notebooks/: 01_data_extraction.ipynb  02_data_analysis.ipynb  03_data_preparation.ipynb  04_regression_modelling.ipynb  05_classification_worth_it.ipynb
report/: report.tex
