[project]
name = "nyc-airbnb-prediction"
authors= [
    { name = "Karol Marszalek(31952)", email = "s31952@pjwstk.edu.pl"},
]
version = "0.1.0"
description = "Machine learining project to predict Airbnb prices in NYC for PUM classes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "joblib",
    "pydantic>=2.12.5",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = ["cli"]

[project.scripts]
airbnb-predict = "cli.main:main"
